--- a/index.html
+++ b/index.html
@@ -92,15 +92,21 @@
 
         <div class="row justify-content-center section-spacing">
             <div class="col-md-8">
-                <div class="subtitle" id="subtitle-inputted">Inputted Compound</div>
+                <div class="subtitle" id="subtitle-inputted">Input Compound</div>
                 <div id="viewer"></div>
             </div>
         </div>
-
+        
         <div class="row justify-content-center section-spacing">
             <div class="col-md-8">
-                <div class="subtitle" id="subtitle-fragmented">Fragmented Compound</div>
+                <div class="subtitle" id="subtitle-fragmented">Best Fragment</div>
                 <div id="viewer-fragmented"></div>
+            </div>
+        </div>
+        
+        <div class="row justify-content-center section-spacing">
+            <div class="col-md-8">
+                <h5 id="fragment-output" class="text-center text-muted"></h5>
             </div>
         </div>
     </div>
