--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                         <label for="proteinSelector">Select Protein</label>
                         <select class="form-control" id="proteinSelector" required>
                             <option value="">Select a protein</option>
-                            <option value="CGRP receptor">CGRP receptor</option>
-                            <option value="wt KRAS">wt KRAS</option>
                             <option value="mTOR">mTOR</option>
+                            <!-- <option value="CGRP receptor">CGRP receptor</option>
+                            <option value="wt KRAS">wt KRAS</option>
                             <option value="PI3K alpha">PI3K alpha</option>
                             <option value="KRAS G12C">KRAS G12C</option>
                             <option value="yCP">yCP</option>
@@ -123,7 +123,7 @@
                             <option value="AKT1">AKT1</option>
                             <option value="BRAF">BRAF</option>
                             <option value="ERK2">ERK2</option>
-                            <option value="MEK">MEK</option>
+                            <option value="MEK">MEK</option> -->
                         </select>
                     </div>
                     <button type="submit" class="btn btn-pink btn-block">Submit</button>
